lab1/Test/L1-A-6-76.output
Error Type B at Line 1
Error Type B at Line 2
Error Type A at Line 160
Error Type A at Line 160
