lab1/Test/L1-A-6-76.cmm
int ( float g2FiR6J60b [ 2013265122 ] ) {
  return 905877101 Q0FygZEBs4DYF8ZJLMx / VEDdILGbgNY_9S5erRwp 
    ( - - wx6hhKYr8V8pMSAFBqv = CkEG , m9Rr2Wm3V20Ri ) 
    . ZuTJ5Y_CxPtrqkyV / ! ! - G5c ( QjFGsBWuJ1 ) / 1340819401.932160101 
    - - ! CbigMIgj4X ( vsv84HLxvYcp4Pl ) / 651008707.1779197577 
    / - ! OM2 / - 899586653.793159457 . bT62IpNo [ FOmi29c795mqUmi88Ts 
    ] * f5rsZc2qWNuXxub0t_ ( ) . Bl6rrGr_ / ! - Uk8mu5WNCWUfbXapE9 
    - ! - gf6qT9LaFdNVfn ( ) . dNpbLAJ0C1YMKzm6MsJ9 . 
    IaOdx [ XlHqev8kSOMzmgNA1e ] * - gSTUz ( ) / - xSESLHp 
    ( A_OFS7VTStEQB8t5ZT ) [ f3eKQqp ] * aKnuT1tqbVJY7iHQG0 
    ( ) . TZo * ! 556481632.1734151330 [ LXpMWTy ] + ! 
    - - - lCn33or / - ! yNfvD_ / - - DwEbzrEVBFFWL > ! 
    - FAVGOMI0WoG ( cuNRd_FxmbVui ) . dmQQXXlb + - - seWoz5WnZuyJzkhL 
    * f7EdbuQB == - ! - ! DXJ + dBvBhMqHJ2x ( tGNXgvPQPWNue 
    ) . GzFZRr1B7N0NTDW / MjHr5LU2Muh * NRerFuZcXQWzQgP 
    * ly / f9 / oPbvqGqq8mz / C96u290qII * _MH5cE7j_6go5j 
    < WVKI2eIALSp ( ! AaZCAwtB7ejya9Abdd ( ) + EA82caePFOUg5kF 
    - F3c - _dmvrvkb + d6Ne4QZmmPeoNEJfOsC != W <= y_9Oh7 
    > ZvDk != EvI8dVsG_4 > DC4PgM1s8Ne4HE != rAKr32XNVpwDhNJkI 
    && yC2PUpnx && E5U ) + - ! FuCkQFrxJQJOLjNPxE / aNbfo0RmuK773CK 
    * b27wchUeA + kO1N9E3WPuGPHY ( ) [ GkAcvFcG ] + - 
    - yn47Rp4DyPqZlDVcmsCU / xJn60UKCHan5QdMr * kcY9Gv7Xi 
    * Sq * EGsJONYBWyS2 / Z51LvS4jCZDIar_Ye / tkxr_lL 
    / Ov < ( u ( ) [ - aw0U6w == WtE7 == gIPA1a6 != zzrEjQ 
    == i_GWfhB != Q >= PtR > JKrMR0FhFR8VBHlLJxl != Ax9vz4ios 
    != i3DRo0rULBmco != UyrGXnK < GyhuyLIXlCBYBV_Xotc 
    ] = d6RO9wcxEGsTG_F ( ) = m3CyBaaIEf9c ) [ ZgDhELzpwgTtffRzykD 
    ( ) + MH9w != FvDg <= suYVSE99 > QiL4 < NAVNG >= phWpP 
    < ilZBZqYCNzRos5 <= t1Y7RlgC < EpgdQz > iMq && vEO 
    && l3vJqp1AjWPG || I || qor || pWTU8so5a || nw6vm5 
    || YMG9VVtOsfwB82_hD || FLN5254b_bMhD0 ] . Vpy6zjjWiow5KX 
    / Fsv9l ( PkYnx9hMYwDZJjYsrg ) * - - Vp2MhC - - yIUVpo6pYo0dpR9T 
    * k7GDuqz5kRRF * gzO2_vdPSFobMuO - ! - vigPPSoUHNwX8O4uW 
    + 1213555547.1318803993 [ Bf_yPswrkykD5ka ] - - ! 
    l - ! ! D4c3tHcHsMLs9 + - 133716383.1040298750 * zjqWMgbAdgSQB 
    / aLUvgFv5SjHbrlgCh / RkPgn5m9A2ZrD2sZ9e / Yp / pZET11KdbyjZGSttf9H 
    * EToQduHYZewcX <= - ! ! 358826440 / HCpug3XHILqVTrvWn 
    ( ) [ Kd8rtkrk_63NwFS ] . EW_CMhsxHZAgROEARZWm [ nc 
    ] . vVBHfK2oyWfxvGvuD55 [ COoxtyMBP4kY ] . Nuiwj052aMB8 
    + 1782645591.1219987576 / ezJQPrXS * UfeP5Sy65dLA9R1TKUm 
    / DQsVjd - - - poPPH8gBT52Ei / MxMi1LWEWnxzkK + ! 
    eE4XZ ( ) . ep0QgJpK3 / sBxJaCKMxhHbQ / WmYsDJxnS0TKGwyT 
    * v6KfbO6K4 + ! - itYfVjGI4SOZpg < - 412764065 [ ! 
    Jh4KDRR3bbMM * qYL5Cw < MjBvxTMfEqFs2 > A9w6RYIwDXuj 
    > cAZN9N < ePXfJost >= gu1EcK1TCMSRr9 > ug8lb4CnUIIzQd 
    <= uQkIM3YxsQTUzR2V9pQ < mm != w8kvvx7vZSZ6Y == mqYz1 
    != G != WcHr5Y < kNTKxpOaCXG >= Gd0OO != rvM4Bj3s36t 
    > Wp <= b || yKYE || yFmipiI91XcbmpA ] <= ! KpdkCoB_DJNfH 
    ( - xU7C = xYPaimQQBUep0S7 , S1ocYYtBpl ) / ! - bvKSIrez_ 
    * ! ! x2k * - - YYMcD4f6 * j * - OnSqdss85 ( ) [ SudFRm 
    ] / 1874993194.1057578062 / - b0Ld6P23 ( pBH ) . kBiN11z 
    * ! ! S7NOOEy / ! IDUWry_stPou ( FxB0IZR1UKni3I4w 
    ) + ! ! T / h53yAvvXFyzg0 * CODjV0KmqX5ituYppcn * 
    A0iIdeFC9y <= LpT4GzQ ( u55UfpGAJhyA ( NN9pMkxn8 ) 
    = SLo67vmuWxwO73xe_rCt , Eb ) / VEz ( ) [ RMREOixipwBnc3NKWj 
    ] - - - PmrGG7VE * qFjbv8QD * BRoaJNxRsODdb + - ! 
    qCh1 * gALz3GUg_ * onwP92Pre6gP2BykQ * z4vowh / Ems_N5vUsr5Ohi 
    - ! ! Koy2nlHyhUVEYz6MPd8 * p_shzkHeHOrID * UTBhc8b_Qk6nxy 
    / xPL4ASzind_ - ! ! nI6_UlhJoE3 + - Oo ( ) / e1uJ1tX 
    / Iyl8TrmiJLcfGGlps1fz - ! ! fA4J5GgVZR0hHerHo4a9 
    - ! sytpUh8 ( ) * Pv0n / nmoHrIMK_ * f * hcrh2l9BDNW0Fy_ 
    * icdBhvgts / ROwx4N9p7A - yo8PTbtr02 ( ) . WLiI * 
    hSfVxWWftsPx / JeR / GldGmik / YY4kplSTdVHHJgeZ2 == 
    - ! - - tdeQD / l70TzpiEtIE2d0F0JIr ( _IzPYTdDseeQ7SRFhHC 
    ) [ xChf ] * 2025438987 [ _wAPJbMA5QcIz ] / c6 ( Sy27wAQ 
    ) + ! ! dO913dNP / WIUxOt1hDI / ysrLNsgYVToZJFif * 
    a3awzgKFFlQh * DUAyxdIlFODe0rw + - DqizMn ( lqOOk0DisMn0sUZ6x6g 
    ) * PNvwe - Nk ( ) + - Ly4n17Eih ( ) . YKCB6hmGJdcDjmE6D6tJ 
    . lEfr [ RgwFX ] . JtsuwSXKB3H6imdY [ J6z ] * w9FqQjQgCL13 
    * lBoDfCD - VBDv7VEI_5HFKs ( b9RqcisQWYj ) . peC9QRWX84 
    . DOOGG72sWRH [ NpZhujF6lUYo ] [ m1tyZ00pJEiX ] / 
    q_8CIfxyNcr0fx / WFDUQ3 / njlTj50HS4ocg1ZpGNuh > ! 
    ufNwPDJGkl ( - dkAXeSxnOXl = DP6wc9h8Y ) / - - C + 
    ! ! h == ( ! ! - FW7Zb - ! F9HP1T - v26KsP ( tdTXWa9iKWqine 
    ) [ sLIAVuHBTn66Q ] + ( bRARIoD5sdnHgTsnyLZk ) [ oWjQtLWaPRRAaxU 
    ] / x10Xzf * CuOXhG * XiRe4R * aHevonKr03lFpJg * FZbVBcHsg 
    + ! xKSjqfOw4PwzO6b * tcF9LPYejp12iNdZ2ds + - nQscGWPCK399Ry 
    / jEJ5Q8KlYEFE_ / tVH22GO7_pIAY / VK2iQfbFmCPI15wRws 
    / w6ZOjsJFj9Wfw + Mw1Js8sGfn5_hBmvz ( ) * azU5IxoaiFCii7nmF7 
    * pxF6g5JL6jV * TjN8lOvCYrEbQIfe * LfBcSk1VVUDPFaKk 
    / rWbaxtm8c + oPU_cN4T5VK5Qv ( ) / LTg * A21c4YHCFnRoyM 
    * qYcB5_vVO5_S2A3 * dLopuBVmUe5FHURrW * xN <= - apI4uuWYFYoUeHTvNfx 
    * Zx - l + CcH + z68oeplhY3DleDpqva || - wgo4WcWAUCwIo 
    >= eit9d > V9Lv4IY && Xc7sWv0EMUc6R03PS || ! lJ79D1 
    / xa1Zt - PHt3LrTAIVt3I < fsPcd1vstTOG5n <= rtc5v 
    < cwnpMAbJ_MHke && Tn && tmheYiWD && L9BL8vFD || ! 
    DY / DUNbRQJpwLw - _Fw != _YNKTlC9To < kQd > k2iR9 
    != IGAy <= aF65J1tKX_ < nRE9Oj71JNGO <= uS == hT < 
    Nrg7y && mQ8oCSQe3 ) . hgooiPh59lSdYJ [ vSsXWCP ( 
    b5_xeZeP1RkgvE8n ) - nTem1Cd >= M == GeNGpR < QMKIDlA1HDV1jRQW7l 
    == wPrFqYEf55meYQn == QbLDZw31O2yxe3v >= XG8tRLH81kEhj 
    <= lbJWmG != tPquqNGsbAycjiu_V ] . QEm - rkOzleA6fbUXuS 
    ( ) [ L ] . O5NEWqM - 2108771910 * nPiHRhzzuEwzdCdW 
    / ALhWU9 / _ph9hMgPSOKdQV - - ! FF3K7R * HVx / tjKiI7we 
    / lDLY6eucoCXFeoTqp - ! - YBoobLPu4SOzynJp - - - Kk0O6vAabLDGJ 
    * hR7OKxBtw * TlQpQkcZHXgQnDF9POM / TXmlOcI4bYk5AZT 
    + ! zmdmHEXjxXu ( bz0x1_wrbsp4OR_M ) . EILo1vDLP4al0 
    [ n ] != ! 56941478 * apUuCzJ8Q ( ) [ AOWNN ] [ dUpu9m4JV 
    ] . KQrGsw4 . tH4uosM9uWlo + - - qOy * W / HWSAuXbjo4Rybr 
    + - - vipCM_1ENMj * MJfO1E2Imj * ffmkYf03dGNC4ZUQWc_8 
    / qUBzosY9smmk5mzxIuyp + pCy5dUywdzC3T3 ( ) / P2zYcB 
    + ! - oyQMyFvucf1uEYAhc * XiQoqwU0CRtkcE - ! 773034871 
    [ SJBOs5c_ ] . MVgLWMCZtqkTIMf9FVyl / _wCrExC5RBQ93l1ku 
    * Xwg_wKnsPbI1 * d + ! f8fZrpfm6rWFi5mEu9X ( ) + ! 
    - v7UnMJ3lSwzZvaGTKYR / ZNSAKt8Htr03JI9 / LL6PZSMlF 
    * SuSfd4w - - PoW7wZO8HzKC7MJ8 [ a5KeibAXzMayFWnqG8 
    ] >= ! x3W1YUYcKgWnT ( ) - 1104083266 [ PwVFShd ] 
    * fv / u7D62MNSI348 + - - Yey3ACXrGwWJIvyJI / yIDr7kT 
    / L_bmw * YDvg53fKF * q / _SC6 * _QjXYLG2tQP / FH5DJ9 
    / aWeSjZTRWTjHikCS - - ! ijzqqgHdgoec9 - - - ZGWm6a4oyUbK9b 
    - ! ! uYlpa5ZCKmkiDRhUt + - - E / QyULtH9tMSqAq >= 
    ! ( ! M9ZKSRr4u8zw1lhGYA ( ) / HS8lq51u5 / aS2TnPUHc5XW 
    - Wv1J8RecfFFhu - OLVj_FZcuzmpUW - azBFe0 + iUrXPn_Nl5wKP0uDsFO 
    - BWHVZDnnJaAJ7DPAv0 <= I == _gC2lnFejD45 == p <= 
    bWAQYzf8CA == g0XFm < bCnfxjyY3h1hH1fWN <= GTx > W 
    > Pc8qY_mx8 == NzEcJA_TuM0ni68uDXW ) [ - RZCMDQ8 <= 
    li < jRozslZjhYrVOtY2l7Y < Id89Ta3UA >= qbiN0efp2k 
    == n5bBkJSQauN6 <= AA0eSk0i7 == UFCM98jocKtR > UPuQZJ4MutXB_kJf6yz 
    < HZuum4s6vFIIr == ImjHA == p8VDoMoZI3YN3Lmrr == aOFjzAiobXyRe 
    == AWK6RbeaY <= xPkPumVGAy || aitYHC3efF || vGeTTvbPdgooPz0H0w 
    || VwwzkhKQ ] * - - ys8TfKnJ * F ( Ks5RPNFrqxZYkHF 
    ) * - ! OZN * ! ! wRFyxTZMO4IJYVScQDlS - - - wip7Wlc2YUFDz 
    / PQzOul1mRIHToBr7 <= - - ! - CLVSS8_qpwYO5e / ! ! 
    kTQId7Z8PXq + ! - zKJeWjpkJr / zq4Sasn + SmKnzCczaleVfj 
    ( ) . qfMan8nKzUzGYlsWK . HhJkn21aKj + ! - rmYA1ikwnxBH1ieY 
    / FwevpSfw * NSvVHhoftFUI8R / su5NXhdTyL5 - - l7z 
    ( N1e_XELosR ) > ( totkoAbW6GlFoD ( ) / ! hITrGfjr1xPi6oN7C 
    / - PExxOBnicj2 * IM ( e2FM6VJzO39q39x1WYoy ) / ! 
    IGxnpAMP != sJS4RvKes7F3vNMca ( cUcBA ) * yNwhQSy7yCNAiVSAIa_v 
    - uXvC_AbWNWPe0 - leQcQ <= - bgcvCKnad > gtvYxwODsMRdkdgK 
    == 330543145 * doWLwfz7k * gHga0 * zhtAbk8Kn3v * l0Lf 
    + L7lh - dq - Rw42LLd7YH - l4BdEqDZ8z - LxpGbfqt9J_ 
    - sivsZM7K1AxT7nx7xLJ - PXs + fM4kQiH - kP + VGrodWQqSYsDY 
    ) [ - ! PEwLNV = PjbXc ] + ! - GGENz7ZcV * GCSZ02Oudizt 
    >= ! - - kHhqTWiIthio3FlP_pO ( ) . LxebLsp6lKziAn 
    / ! 1745233365.777094911 / ( V70ZWg ( vdZQ5hWw_Zg69esqoqx4 
    ) . qheEwZrm5 = E3sgBTdXjnavrm ) [ HlaAxpVY2i ] . 
    Kjnmgm * ( ! aAOyFeKt0DvK9 = QGi5 ) / - A0Z5eUHo2a19 
    ( ) * ! liz ( ) - - ! POjmcZZj < - vrS0bhYA ( ! RtRY 
    / qRDI27n1EaTzSPj3 / MVoAdEGiyrFZG5xX >= WHMOqGkoHS9H 
    == SDo >= iYah2A5gZIEvqfg || zSOWRTtJBfheidxU || ohbY9MhB_qz 
    || q2VZJOc8tO ) [ Z2NuCoi9_k ( ) / Qsij51q4QuS5qARM6 
    + B4NYYKO0 - Vs6UWyJp > w1361faanLRgbOUi != KZ == 
    BD9Nhxh5YE48FC <= TI2btarjFiePclgkk == vk8GIY4vUPxE0Dx 
    <= kcWjq_F27k < LhA_zY7XeXlf5kT == _eyNjPek >= Kby 
    <= WBbi9 > JA218yftCdNlT_l8uzi > vbrGokg5TdVtIONE 
    != Av && j || l71LH4v5Wdxb || C ] >= cVz2UDqoTJrlY 
    ( ! _wMnf76O5z9uvFQykc ( tErsf ) = JyeSxn3V , gn4Mqatj6VxWJaF 
    ) * - - him9loy == vciS55Eo__ ( ) - - - av5yB6bWTxNQaafeBCU2 
    / JxW3f != ! - ! ImFgLfcOvZx27QyzeDz [ SHCBfcNcYn5m3HV 
    ] . hsZU . fz . UMJlofd / - jQR1RqyJbulJ ( n ) / ! 
    - kW5MJscAoB7PeUiGN * 1685615511.1926886234 . ck * 
    rBWYxB35BHDQXGC ( ) [ i9ZOW9qVhEht0 ] / - Rp ( W5N7QiLc 
    ) . MpMJK23nQSXnNbioxmyD [ Q ] [ Bz8Busg ] [ wMy ] 
    [ QILev4eNvtvQY0MJ ] [ YTllJVuZv7t ] + d2i0Yw9uDrTv 
    ( l2sYQpOSPMGY2KjpNQFw ) . k44nlJ * pJq * TWcxY92eza0lre 
    / CDyMtO * a3Qv * G * oG02su_q16Fc7GtCkXW / hdbtFREwlGBZWaWQkx 
    / mLJw4vxOXG7aK >= - - - ! r4XiEQn3HcfP ;
}
~%